2008-05-15  Glenn Morris  <rgm@gnu.org>

	* vc-hooks.el (vc-directory-resynch-file): Fix declaration.

	* org/org-exp.el (org-infojs-options-inbuffer-template):
	Fix declaration.

	* progmodes/cc-mode.el (declare-function): Add compat definition.
	(awk-mode-syntax-table, c-awk-unstick-NL-prop): Declare for compiler.

2008-05-14  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-dispatcher.el (vc-dispatcher-selection): Change the returned
	list to a cons so the caller can get back both expanded and
	unexpanded filesets.
	* vc.el (vc-deduce-fileseset, vc-next-action, vc-diff-internal,
	vc-merge, vc-version-diff, vc-print-log, vc-revert, vc-rollback):
	Change handling of selection-set returns as required.

2008-05-15  John Paul Wallington  <jpw@pobox.com>

	* add-log.el (top-level): Don't require cl when compiling.

	* arc-mode.el (archive-add-new-member): Use `derived-mode-p'.
	(archive-*-extract): Use `zerop'
	(archive-*-write-file-member): Use `or', use `zerop'.

	* diff-mode.el (diff-current-defun): Use `buffer-local-value'.

	* ibuffer.el (ibuffer-assert-ibuffer-mode): New defsubst.
	(ibuffer-mark-interactive, ibuffer-set-mark)
	(ibuffer-insert-buffer-line, ibuffer-redisplay-current)
	(ibuffer-map-lines, ibuffer-switch-format)
	(ibuffer-update-title-and-summary)
	(ibuffer-redisplay-engine): Use it.

	* ibuf-ext.el (ibuffer-interactive-filter-by-mode)
	(ibuffer-set-filter-groups-by-mode, ibuffer-list-buffer-modes)
	(define-ibuffer-filter mode, define-ibuffer-filter used-mode)
	(define-ibuffer-sorter major-mode, ibuffer-mark-unsaved-buffers)
	(ibuffer-mark-read-only-buffers)
	(ibuffer-mark-dired-buffers): Use `buffer-local-value'.

	* ibuf-macs.el (ibuffer-aif, ibuffer-awhen, ibuffer-save-marks)
	(define-ibuffer-column, define-ibuffer-sorter)
	(define-ibuffer-op, define-ibuffer-filter): Add declarations
	containing indentation specs, replacing equivalent top-level
	forms that set `lisp-indent-function' properties.
	(define-ibuffer-op): Use `derived-mode-p'.